feat: Add provider management and intelligent routing (#1)
* ui: icon-aligned theme, larger default window, add AGENTS/QWEN

* ui: light theme + events scroll; app: single-instance focus

* ui: increase light-theme contrast

* ui: hide main scrollbar, redesign events scrollbar, custom title bar

* ui: keep native title bar with mica; hide main scrollbar

* ui: reduce white flash; fix pill text centering; revert mica

* ui: remove chat capability + custom set-key modal; backend: responses-only + unknown health

* ui: pulse running/auto pills; rename capabilities header

* feat: add gateway token auth and config UX

Add a local gateway auth token so Codex can authenticate to the localhost gateway (token lives in user-data/secrets.json). Prevent forwarding the local token upstream and keep provider keys separate. Improve UI config/routing ergonomics (toast notifications, auto-apply routing, conditional Save button for base_url edits). Keep local state next to the EXE under user-data/; keep secrets/binaries gitignored.

Verification: npm run build; cargo check (src-tauri)

* feat: add quota refresh (ppchat/packycode) with low-frequency scheduler

* chore: rustfmt + update cargo lock

* fix: auto-derive usage endpoints from base_url (no hardcoded domains)

* chore: generic usage adapters + CI + tests

* feat: configurable usage base url (domain-agnostic)

* ci: add pr_gate + changes jobs

* ci: install linux deps for tauri builds

* feat: add minimal MCP server (stdio)

* ci: fix linux deps for rust tests; docs: tighten readme; mcp: lockfile

* feat: official web status + remaining (best-effort)

* fix: improve usage 404 guidance

* fix: widen layout + add official web close + clarify usage base

* fix: make official web window closable (hide on close)

* fix(ui): refine layout and codex auth UI

Rework provider config layout and usage controls spacing.
Add Codex auth limits display adjustments and dev-safe mocks.

* fix(ui): remove tokens column and gate mocks

Use dev 

--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Agent Orchestrator</title>
+    <title>API Router</title>
+    <!-- Prevent initial "white flash" before JS/CSS hydrate. -->
+    <style>
+      html,
+      body,
+      #app {
+        height: 100%;
+      }
+      body {
+        margin: 0;
+        background:
+          radial-gradient(1100px 680px at 16% -8%, rgba(40, 199, 217, 0.22), transparent 58%),
+          radial-gradient(1100px 680px at 94% 0%, rgba(242, 193, 77, 0.22), transparent 60%),
+          radial-gradient(900px 620px at 55% 118%, rgba(40, 199, 217, 0.14), transparent 62%),
+          linear-gradient(180deg, #ffffff, #f6f8fb);
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
